--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -15,9 +15,10 @@ services:
         max-file: '5'
         max-size: '10m'
     environment:
-      - PROJECT_ID=${PROJECT_ID} # change to match your own environment
-      - PROJECT_NAME=${PROJECT_NAME} # change to match your own environment
-      - PROJECT_MNEMONIC=${PROJECT_MNEMONIC} # change to match your own environment
+      - PROJECT_ID=${PROJECT_ID}
+      - PROJECT_NAME=${PROJECT_NAME}
+      - PROJECT_MNEMONIC=${PROJECT_MNEMONIC}
+      - UPLOAD_DIR=${UPLOAD_DIR}
   couchdb:
     image: couchdb
     restart: always
