Enable Helia local file storage.

--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexa-garden",
-  "version": "23.9.13",
+  "version": "23.9.19",
   "license": "MIT",
   "scripts": {
     "build": "nuxt build",
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@helia/unixfs": "1.4.2",
     "@pinia/nuxt": "0.4.7",
+    "blockstore-fs": "^1.1.6",
     "fflate": "0.8.0",
     "formidable": "3.5.1",
     "helia": "2.0.1",
