--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     image: nexa-garden
     container_name: nexa-garden
     restart: always
-    ports:
-      - '127.0.0.1:3000:3000'   # use with proxy server (eg. Nginx)
-      # - '0.0.0.0:80:3000'     # use without proxy server
+    network_mode: 'host'
+    # ports:
+    #   - '127.0.0.1:3000:3000'
     logging: # apply better controls to Docker overlay folder
       driver: 'json-file'
       options:
