Update env and volumes.

--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -15,15 +15,16 @@ services:
         max-file: '5'
         max-size: '10m'
     environment:
-      - PROJECT_ID=${PROJECT_ID}
-      - PROJECT_NAME=${PROJECT_NAME}
-      - PROJECT_MNEMONIC=${PROJECT_MNEMONIC}
+      - HELIA_DATA=/helia
+      - UPLOAD_DIR=/uploads
+      - MNEMONIC=${MNEMONIC}
     volumes:
-        - ${IPFS_STAGING}:/export
+        - ${HELIA_DATA}:/helia
+        - ${UPLOAD_DIR}:/uploads
         # WARNING This is very dangerous, as it gives 100% control over the host machine's Docker instance.
         #         However, this is the "preferred" way to execute CLI on another container.
         #         (source: https://nathanleclaire.com/blog/2014/07/12/10-docker-tips-and-tricks-that-will-make-you-sing-a-whale-song-of-joy/)
-        - '/var/run/docker.sock:/var/run/docker.sock'
+        # - '/var/run/docker.sock:/var/run/docker.sock'
   couchdb:
     image: couchdb
     restart: always
