--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -15,17 +15,13 @@ services:
         max-file: '5'
         max-size: '10m'
     environment:
-      - HELIA_DIR=/helia
-      - UPLOAD_DIR=/uploads
+      # - HELIA_DIR=/helia
+      - IPFS_STAGING=/ipfs_staging
       - MNEMONIC=${MNEMONIC}
       - GATEWAY_PATH=/gateway
     volumes:
         # - ${HELIA_DIR}:/helia
-        - ${UPLOAD_DIR}:/uploads
-        # WARNING This is very dangerous, as it gives 100% control over the host machine's Docker instance.
-        #         However, this is the "preferred" way to execute CLI on another container.
-        #         (source: https://nathanleclaire.com/blog/2014/07/12/10-docker-tips-and-tricks-that-will-make-you-sing-a-whale-song-of-joy/)
-        # - '/var/run/docker.sock:/var/run/docker.sock'
+        - ${IPFS_STAGING}:/ipfs_staging
         - ${GATEWAY_PATH}:/gateway
   couchdb:
     image: couchdb
