--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -8,8 +8,8 @@ COPY package.json /usr/src/app/package.json
 RUN yarn install --silent
 
 COPY . /usr/src/app
-RUN yarn run build
+#RUN yarn run build
 
-EXPOSE 3000
+EXPOSE 4000
 
 CMD ["node", "./index.js"]
