Add Express server.

--- a/proxy/package.json
+++ b/proxy/package.json
@@ -3,6 +3,7 @@
   "version": "23.9.20",
   "description": "Proxy handler for sub-domain shortcuts.",
   "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2"
