--- a/proxy/package.json
+++ b/proxy/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "4.18.2",
+    "request": "2.88.2"
   }
 }
