--- a/proxy/docker-compose.yml
+++ b/proxy/docker-compose.yml
@@ -6,8 +6,9 @@ services:
     image: proxy
     container_name: proxy
     restart: always
-    ports:
-      - '127.0.0.1:5000:5000'   # use with proxy server (eg. Nginx)
+    network_mode: 'host'
+    # ports:
+    #   - '127.0.0.1:5000:5000'   # use with proxy server (eg. Nginx)
       # - '0.0.0.0:80:3000'     # use without proxy server
     logging: # apply better controls to Docker overlay folder
       driver: 'json-file'
