--- a/web/docker-compose.yml
+++ b/web/docker-compose.yml
@@ -15,6 +15,8 @@ services:
         max-file: '5'
         max-size: '10m'
     environment:
+      - COUCHDB_USER=${COUCHDB_USER}
+      - COUCHDB_PASSWORD=${COUCHDB_PASSWORD}
       # - HELIA_DIR=/helia
       - IPFS_STAGING=/export
       - MNEMONIC=${MNEMONIC}
