--- a/docs/docker-compose.yml
+++ b/docs/docker-compose.yml
@@ -1,11 +1,9 @@
-version: '3.7'
-
 services:
   app:
     build: .
     image: docs
     container_name: docs
-    restart: always
+    restart: unless-stopped
     ports:
       - '127.0.0.1:4000:80'
     logging: # apply better controls to Docker overlay folder
