--- a/proxy/docker-compose.yml
+++ b/proxy/docker-compose.yml
@@ -1,11 +1,9 @@
-version: '3.7'
-
 services:
   app:
     build: .
     image: proxy
     container_name: proxy
-    restart: always
+    restart: unless-stopped
     network_mode: 'host'
     # ports:
     #   - '127.0.0.1:5000:5000'   # use with proxy server (eg. Nginx)
