--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexa-garden",
-  "version": "23.11.12",
+  "version": "24.7.25",
   "license": "MIT",
   "scripts": {
     "build": "nuxt build",
@@ -17,9 +17,9 @@
     "formidable": "3.5.1",
     "helia": "2.0.1",
     "moment": "2.29.4",
-    "nexajs": "23.11.2",
+    "nexajs": "24.7.20",
     "numeral": "2.0.6",
-    "nuxt": "3.0.0",
+    "nuxt": "3.7.4",
     "pinia": "2.0.32",
     "pouchdb": "8.0.1",
     "qr-scanner": "1.4.2",
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@nuxtjs/i18n": "8.0.0-rc.2",
-    "@nuxtjs/tailwindcss": "6.4.1"
+    "@nuxtjs/tailwindcss": "6.4.1",
+    "postcss-custom-properties": "13.3.10"
   }
 }
